Update example output

--- a/example/artillery.ipynb
+++ b/example/artillery.ipynb
@@ -137,21 +137,16 @@
        "};\n",
        "\n",
        "_test_estimator_linreg = {\n",
-       "    4.480465477796347e-17*(_this#0) - 1.5124620306172787e-17*(_this#1) -\n",
-       "    1.1926223897340549e-18*(_this#2) + 4.7704895589362195e-18*(_this#3) +\n",
-       "    4.218834794149084e-07*(_this#4) + 2.880030002333378e-07*(_this#5) +\n",
-       "    6.561056814214829e-08*(_this#6) - 8.131516293641283e-20*(_this#7) -\n",
-       "    1.0842021724855044e-19*(_this#8) + 3.0814879110195774e-33*(_this#9) +\n",
-       "    0.0007551714281506134*(_this#10) + 0.000515525370417718*(_this#11) +\n",
-       "    0.00011744291697421106*(_this#12) + 2.311115933264683e-33*(_this#13) +\n",
-       "    4.237045877651919e-33*(_this#14) + 0.0005526673580320136*(_this#15) +\n",
-       "    0.00037728393030569995*(_this#16) + 8.594984426604423e-05*(_this#17) +\n",
-       "    0.0*(_this#18) + 8.015786108861227e-06*(_this#19) +\n",
-       "    5.472057004433943e-06*(_this#20) + 1.2466007946983526e-06*(_this#21) -\n",
-       "    0.0006540085849580283*(_this#22) + 0.00020285218992919217*(_this#23) -\n",
-       "    1.568894942097784e-05*(_this#24) - 0.0006650353274694005*(_this#25) -\n",
-       "    0.00025614485588034466*(_this#26) + 0.0003550490371142373*(_this#27) -\n",
-       "    2726.248790421698\n",
+       "    4.480465e-17*(_this#0) - 1.512462e-17*(_this#1) - 1.192622e-18*(_this#2) +\n",
+       "    4.770490e-18*(_this#3) + 4.218835e-07*(_this#4) + 2.880030e-07*(_this#5) +\n",
+       "    6.561057e-08*(_this#6) - 8.131516e-20*(_this#7) - 1.084202e-19*(_this#8) +\n",
+       "    3.081488e-33*(_this#9) + 7.551714e-04*(_this#10) + 5.155254e-04*(_this#11) +\n",
+       "    1.174429e-04*(_this#12) + 2.311116e-33*(_this#13) + 4.237046e-33*(_this#14)\n",
+       "    + 5.526674e-04*(_this#15) + 3.772839e-04*(_this#16) +\n",
+       "    8.594984e-05*(_this#17) + 8.015786e-06*(_this#19) + 5.472057e-06*(_this#20)\n",
+       "    + 1.246601e-06*(_this#21) - 6.540086e-04*(_this#22) +\n",
+       "    2.028522e-04*(_this#23) - 1.568895e-05*(_this#24) - 6.650353e-04*(_this#25)\n",
+       "    - 2.561449e-04*(_this#26) + 3.550490e-04*(_this#27) - 2.726249e+03\n",
        "};\n",
        "\n",
        "_test_estimator = {\n",
@@ -179,10 +174,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function export_estimator in module rega3.exporter:\n",
+      "\n",
+      "export_estimator(estimator, function_name, decimal_places=6, indent='    ', line_length=80)\n",
+      "    Export trained regression model from Scikit-learn to SQF code.\n",
+      "    \n",
+      "    :param estimator: Fitted estimator to export_estimator.\n",
+      "    :type estimator: sklearn.base.BaseEstimator\n",
+      "    :param function_name: Name for the SQF function.\n",
+      "    :type function_name: str\n",
+      "    :param decimal_places: Number of decimal places for coefficients.\n",
+      "        Defaults to 6.\n",
+      "    :type decimal_places: int, optional\n",
+      "    :param indent: The string used for indentations. Defaults to four spaces.\n",
+      "    :type indent: str, optional\n",
+      "    :param line_length: Maximum line length for the code. Defaults to 80.\n",
+      "    :type line_length: int, optional\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(export_estimator)"
+   ]
   },
   {
    "cell_type": "code",
