--- a/example/artillery.ipynb
+++ b/example/artillery.ipynb
@@ -14,21 +14,17 @@
     "from sklearn.datasets import load_boston\n",
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.linear_model._base import LinearModel\n",
-    "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
+    "from sklearn.linear_model import LinearRegression, Ridge, Lasso, ElasticNet\n",
     "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.model_selection import cross_val_score, train_test_split\n",
+    "from sklearn.model_selection import cross_val_score, GridSearchCV, train_test_split\n",
     "from sklearn.metrics import make_scorer, r2_score, mean_squared_error, mean_absolute_error\n",
     "import matplotlib.pyplot as plt\n",
-    "from rega3 import export_estimator\n",
-    "\n",
-    "polyfeat = PolynomialFeatures(degree=2)\n",
-    "linreg = LinearRegression()\n",
-    "pipe = Pipeline([('polyfeat', polyfeat), ('linreg', linreg)])"
+    "from rega3 import export_estimator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -48,32 +44,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X.shape:\t(29, 6)\n",
-      "X_train.shape:\t(17, 6)\n",
-      "X_test.shape:\t(12, 6)\n"
+      "X.shape:\t(29, 2)\n",
+      "X_train.shape:\t(20, 2)\n",
+      "X_test.shape:\t(9, 2)\n"
      ]
     }
    ],
    "source": [
     "display(Markdown('### Load Data\\n---'))\n",
-    "df = pd.read_csv('ChosunOne_ArtilleryData.csv')\n",
-    "X = df.drop(['Firing Angle', 'Firing Mode', 'Weapon Platform'], axis=1).values\n",
-    "y = df['Firing Angle'].values\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.4, random_state=0)\n",
+    "df_raw = pd.read_csv('ChosunOne_ArtilleryData.csv')\n",
+    "df_raw['distance'] = np.sqrt((df_raw['Target Position X']-df_raw['Firing Position X'])**2 + (df_raw['Target Position Y']-df_raw['Firing Position Y'])**2)\n",
+    "df_raw['height'] = df_raw['Target Elevation'] - df_raw['Firing Elevation']\n",
+    "df = df_raw[['distance', 'height', 'Firing Angle']]\n",
+    "X = df.iloc[:, :-1].values\n",
+    "y = df.iloc[:, -1].values\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=0)\n",
     "print('X.shape:', X.shape, sep='\\t')\n",
     "print('X_train.shape:', X_train.shape, sep='\\t')\n",
-    "print('X_test.shape:', X_test.shape, sep='\\t')"
+    "print('X_test.shape:', X_test.shape, sep='\\t')\n",
+    "#df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "### Fit Data\n",
+       "### Model Selection\n",
        "---"
       ],
       "text/plain": [
@@ -87,26 +87,98 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE train: 0.572, test: 0.693\n",
-      "R^2 train: 0.996, test: 0.995\n",
-      "Mean and std of CV MAE: 3.978708898909887 2.1380060781855637\n"
+      "best_model: Pipeline(steps=[('polyfeat', PolynomialFeatures(degree=3)),\n",
+      "                ('linreg',\n",
+      "                 Ridge(alpha=1.2067926406393288e-06, normalize=True))])\n"
      ]
     }
    ],
    "source": [
-    "display(Markdown('### Fit Data\\n---'))\n",
-    "pipe.fit(X_train, y_train)\n",
-    "y_train_pred = pipe.predict(X_train)\n",
-    "y_test_pred = pipe.predict(X_test)\n",
-    "print('RMSE train: %.3f, test: %.3f' % (np.sqrt(mean_squared_error(y_train, y_train_pred)), np.sqrt(mean_squared_error(y_test, y_test_pred))))\n",
-    "print('R^2 train: %.3f, test: %.3f' % (r2_score(y_train, y_train_pred), r2_score(y_test, y_test_pred)))\n",
-    "scores = cross_val_score(pipe, X, y, scoring=make_scorer(mean_absolute_error), cv=5)\n",
-    "print('Mean and std of CV MAE:', np.mean(scores), np.std(scores))"
+    "display(Markdown('### Model Selection\\n---'))\n",
+    "models = []\n",
+    "polyfeat = PolynomialFeatures()\n",
+    "for linreg in [LinearRegression(), Ridge(normalize=True)]:\n",
+    "    pipe = Pipeline([('polyfeat', polyfeat), ('linreg', linreg)])\n",
+    "    param_grid = {'polyfeat__degree': range(1, 5)}\n",
+    "    if not isinstance(linreg, LinearRegression):\n",
+    "        param_grid['linreg__alpha'] = np.logspace(-10, 0, 50)\n",
+    "    search = GridSearchCV(pipe, param_grid, cv=5, n_jobs=12)\n",
+    "    search.fit(X_train, y_train)\n",
+    "    models.append((search.best_score_, search))\n",
+    "best_model = max(models, key=lambda p: p[0])[1]\n",
+    "print('best_model:', best_model.best_estimator_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "### Test Model\n",
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE train: 0.367, test: 0.911\n",
+      "R^2 train: 0.998, test: 0.992\n"
+     ]
+    }
+   ],
+   "source": [
+    "display(Markdown('### Test Model\\n---'))\n",
+    "y_train_pred = best_model.predict(X_train)\n",
+    "y_test_pred = best_model.predict(X_test)\n",
+    "print('RMSE train: %.3f, test: %.3f' % (np.sqrt(mean_squared_error(y_train, y_train_pred)), np.sqrt(mean_squared_error(y_test, y_test_pred))))\n",
+    "print('R^2 train: %.3f, test: %.3f' % (r2_score(y_train, y_train_pred), r2_score(y_test, y_test_pred)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "### Predict Unknown Point\n",
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction for [100, 0] : 77.2813525918423\n"
+     ]
+    }
+   ],
+   "source": [
+    "display(Markdown('### Predict Unknown Point\\n---'))\n",
+    "point = [100, 0]\n",
+    "print('Prediction for', point, ':', best_model.predict([point])[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -127,26 +199,15 @@
       "text/markdown": [
        "```c++\n",
        "_test_estimator_polyfeat = {[\n",
-       "    1, (_this#0), (_this#1), (_this#2), (_this#3), (_this#4), (_this#5),\n",
-       "    (_this#0)^2, (_this#0)*(_this#1), (_this#0)*(_this#2), (_this#0)*(_this#3),\n",
-       "    (_this#0)*(_this#4), (_this#0)*(_this#5), (_this#1)^2, (_this#1)*(_this#2),\n",
-       "    (_this#1)*(_this#3), (_this#1)*(_this#4), (_this#1)*(_this#5), (_this#2)^2,\n",
-       "    (_this#2)*(_this#3), (_this#2)*(_this#4), (_this#2)*(_this#5), (_this#3)^2,\n",
-       "    (_this#3)*(_this#4), (_this#3)*(_this#5), (_this#4)^2, (_this#4)*(_this#5),\n",
-       "    (_this#5)^2]\n",
+       "    1, (_this#0), (_this#1), (_this#0)^2, (_this#0)*(_this#1), (_this#1)^2,\n",
+       "    (_this#0)^3, (_this#0)^2*(_this#1), (_this#0)*(_this#1)^2, (_this#1)^3]\n",
        "};\n",
        "\n",
        "_test_estimator_linreg = {\n",
-       "    4.480465e-17*(_this#0) - 1.512462e-17*(_this#1) - 1.192622e-18*(_this#2) +\n",
-       "    4.770490e-18*(_this#3) + 4.218835e-07*(_this#4) + 2.880030e-07*(_this#5) +\n",
-       "    6.561057e-08*(_this#6) - 8.131516e-20*(_this#7) - 1.084202e-19*(_this#8) +\n",
-       "    3.081488e-33*(_this#9) + 7.551714e-04*(_this#10) + 5.155254e-04*(_this#11) +\n",
-       "    1.174429e-04*(_this#12) + 2.311116e-33*(_this#13) + 4.237046e-33*(_this#14)\n",
-       "    + 5.526674e-04*(_this#15) + 3.772839e-04*(_this#16) +\n",
-       "    8.594984e-05*(_this#17) + 8.015786e-06*(_this#19) + 5.472057e-06*(_this#20)\n",
-       "    + 1.246601e-06*(_this#21) - 6.540086e-04*(_this#22) +\n",
-       "    2.028522e-04*(_this#23) - 1.568895e-05*(_this#24) - 6.650353e-04*(_this#25)\n",
-       "    - 2.561449e-04*(_this#26) + 3.550490e-04*(_this#27) - 2.726249e+03\n",
+       "    -7.594683e-01*(_this#1) - 3.737601e-01*(_this#2) + 4.451657e-03*(_this#3) +\n",
+       "    3.988812e-03*(_this#4) + 4.182825e-05*(_this#5) - 9.980068e-06*(_this#6) -\n",
+       "    1.338557e-05*(_this#7) - 1.669852e-06*(_this#8) + 1.037233e-05*(_this#9) +\n",
+       "    1.186917e+02\n",
        "};\n",
        "\n",
        "_test_estimator = {\n",
@@ -155,54 +216,23 @@
        "    _this\n",
        "};\n",
        "\n",
+       "systemChat format [\"Prediction for [100, 0]: %1\", [100, 0] call _test_estimator];\n",
        "```"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "display(Markdown('### Export Estimator\\n---'))\n",
-    "sqf_code = export_estimator(pipe, \"_test_estimator\")\n",
-    "Markdown(f'```c++\\n{sqf_code}\\n```')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function export_estimator in module rega3.exporter:\n",
-      "\n",
-      "export_estimator(estimator, function_name, decimal_places=6, indent='    ', line_length=80)\n",
-      "    Export trained regression model from Scikit-learn to SQF code.\n",
-      "    \n",
-      "    :param estimator: Fitted estimator to export_estimator.\n",
-      "    :type estimator: sklearn.base.BaseEstimator\n",
-      "    :param function_name: Name for the SQF function.\n",
-      "    :type function_name: str\n",
-      "    :param decimal_places: Number of decimal places for coefficients.\n",
-      "        Defaults to 6.\n",
-      "    :type decimal_places: int, optional\n",
-      "    :param indent: The string used for indentations. Defaults to four spaces.\n",
-      "    :type indent: str, optional\n",
-      "    :param line_length: Maximum line length for the code. Defaults to 80.\n",
-      "    :type line_length: int, optional\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "help(export_estimator)"
+    "function_name = '_test_estimator'\n",
+    "sqf_code = export_estimator(best_model, function_name)\n",
+    "Markdown(f'```c++\\n{sqf_code}\\nsystemChat format [\"Prediction for {point}: %1\", {point} call {function_name}];\\n```')"
    ]
   },
   {
