--- a/example/artillery.ipynb
+++ b/example/artillery.ipynb
@@ -12,7 +12,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.datasets import load_boston\n",
-    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.preprocessing import PolynomialFeatures, StandardScaler\n",
     "from sklearn.linear_model._base import LinearModel\n",
     "from sklearn.linear_model import LinearRegression, Ridge, Lasso, ElasticNet\n",
     "from sklearn.pipeline import Pipeline\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -87,9 +87,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best_model: Pipeline(steps=[('polyfeat', PolynomialFeatures(degree=3)),\n",
+      "best_model: Pipeline(steps=[('scaler', StandardScaler()),\n",
+      "                ('polyfeat', PolynomialFeatures(degree=4)),\n",
       "                ('linreg',\n",
-      "                 Ridge(alpha=1.2067926406393288e-06, normalize=True))])\n"
+      "                 Ridge(alpha=0.00021209508879201926, normalize=True))])\n"
      ]
     }
    ],
@@ -98,7 +99,7 @@
     "models = []\n",
     "polyfeat = PolynomialFeatures()\n",
     "for linreg in [LinearRegression(), Ridge(normalize=True)]:\n",
-    "    pipe = Pipeline([('polyfeat', polyfeat), ('linreg', linreg)])\n",
+    "    pipe = Pipeline([('scaler', StandardScaler()), ('polyfeat', polyfeat), ('linreg', linreg)])\n",
     "    param_grid = {'polyfeat__degree': range(1, 5)}\n",
     "    if not isinstance(linreg, LinearRegression):\n",
     "        param_grid['linreg__alpha'] = np.logspace(-10, 0, 50)\n",
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -131,8 +132,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE train: 0.367, test: 0.911\n",
-      "R^2 train: 0.998, test: 0.992\n"
+      "RMSE train: 0.153, test: 0.273\n",
+      "R^2 train: 1.000, test: 0.999\n"
      ]
     }
    ],
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +167,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction for [100, 0] : 77.2813525918423\n"
+      "Prediction for [100, 0] : 77.25593763269289\n"
      ]
     }
    ],
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -198,19 +199,28 @@
      "data": {
       "text/markdown": [
        "```c++\n",
+       "_test_estimator_scaler = {[\n",
+       "    ((_this#0)-1.651385e+02) / 4.824397e+01, ((_this#1)-1.650000e+01) /\n",
+       "    5.839649e+01]\n",
+       "};\n",
+       "\n",
        "_test_estimator_polyfeat = {[\n",
        "    1, (_this#0), (_this#1), (_this#0)^2, (_this#0)*(_this#1), (_this#1)^2,\n",
-       "    (_this#0)^3, (_this#0)^2*(_this#1), (_this#0)*(_this#1)^2, (_this#1)^3]\n",
+       "    (_this#0)^3, (_this#0)^2*(_this#1), (_this#0)*(_this#1)^2, (_this#1)^3,\n",
+       "    (_this#0)^4, (_this#0)^3*(_this#1), (_this#0)^2*(_this#1)^2,\n",
+       "    (_this#0)*(_this#1)^3, (_this#1)^4]\n",
        "};\n",
        "\n",
        "_test_estimator_linreg = {\n",
-       "    -7.594683e-01*(_this#1) - 3.737601e-01*(_this#2) + 4.451657e-03*(_this#3) +\n",
-       "    3.988812e-03*(_this#4) + 4.182825e-05*(_this#5) - 9.980068e-06*(_this#6) -\n",
-       "    1.338557e-05*(_this#7) - 1.669852e-06*(_this#8) + 1.037233e-05*(_this#9) +\n",
-       "    1.186917e+02\n",
+       "    -4.341998e+00*(_this#1) - 2.523837e+00*(_this#2) + 3.272668e-01*(_this#3) +\n",
+       "    7.092266e-01*(_this#4) + 2.090458e-02*(_this#5) - 2.016539e+00*(_this#6) -\n",
+       "    1.204412e+00*(_this#7) - 1.092079e+00*(_this#8) + 3.846470e-01*(_this#9) -\n",
+       "    1.116557e+00*(_this#10) - 7.391113e-01*(_this#11) + 6.070328e-01*(_this#12)\n",
+       "    + 2.214901e-01*(_this#13) + 1.511650e-03*(_this#14) + 6.824816e+01\n",
        "};\n",
        "\n",
        "_test_estimator = {\n",
+       "    _this = _this call _test_estimator_scaler;\n",
        "    _this = _this call _test_estimator_polyfeat;\n",
        "    _this = _this call _test_estimator_linreg;\n",
        "    _this\n",
@@ -223,7 +233,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
